--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ file(MAKE_DIRECTORY ${CATKIN_DEVEL_PREFIX}/include)
 ExternalProject_Add(gmock_src
   URL https://googlemock.googlecode.com/files/gmock-1.7.0.zip
   UPDATE_COMMAND ""
-  CONFIGURE_COMMAND cd ../gmock_src && cmake .
+  CONFIGURE_COMMAND cd ../gmock_src && cmake . -DCMAKE_CXX_FLAGS=-fPIC
   BUILD_COMMAND cd ../gmock_src && make -j8
   INSTALL_COMMAND cp ../gmock_src/libgmock.a ${CATKIN_DEVEL_PREFIX}/lib/ &&
 		  cp ../gmock_src/libgmock_main.a ${CATKIN_DEVEL_PREFIX}/lib/ &&
